# golf-analysis

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  secrets.json.example
config/: rapsodo-endpoints.example.json
dashboard/: README.md  docker-dev.sh  index.html  package-lock.json  package.json  vite.config.ts
docs/: deploy-google-cloud.md  feature-list.md  garmin-data-reference.md  garmin-fit-inspect-2026-05-08.txt  local-auth.md  new-course-prep-plan.md  on-course-analysis-methodology.md  project-status-and-rapsodo.md  raw-data-inventory.md  sqlite-library-schema.md
golf_analysis/: __init__.py  analysis_plan_report.py  cli.py  cloud_storage.py  executive_reveal_report.py  fit_inspect.py  garmin_course_holes.py  garmin_esz_dsz.py  garmin_export_analytics.py  garmin_handicap_gross.py  guest_access.py  ingest.py  metrics_reference.py  models.py  on_course_prep.py  on_course_strategy.py  range_analysis.py  range_shot_analytics.py  rapsodo_list_kinds.py  repository.py  scoring_zone_constants.py  serialization.py  training_block_planner.py  training_block_store.py
scripts/: cloud_download_data.py  deploy-cloud-run.sh  push-dashboard-data.sh  setup-cloud-mobile.sh
tests/: test_access_tokens.py  test_analysis_plan_report.py  test_api_dashboard.py  test_api_deps.py  test_connectors.py  test_credential_discovery.py  test_dashboard_secrets_store.py  test_data_sources_api.py  test_drills.py  test_executive_reveal_report.py  test_fit_inspect.py  test_garmin_course_holes.py  test_garmin_esz_dsz.py  test_garmin_export_analytics.py  test_garmin_golf_community.py  test_garmin_handicap_gross.py  test_local_auth.py  test_metrics_reference.py  test_on_course.py  test_on_course_prep.py  test_range_analysis.py  test_range_shot_takeaways.py  test_rapsodo_list_kinds.py  test_refresh_runner.py  test_sync.py  test_training_block.py  (+1 more)
(+73 files in other folders)
