[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "golf-analysis"
version = "0.1.0"
description = "Aggregate golf data from launch monitors, wearables, and exports via pluggable connectors"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "fitparse>=1.2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "httpx>=0.27",
]
sync = [
    "garth-ng[cli]>=1.1.0",
    "httpx>=0.27",
]

[tool.uv]
default-groups = ["dev"]

[project.scripts]
golf-ingest = "golf_analysis.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["golf_analysis"]

[tool.ruff]
line-length = 100
target-version = "py311"
